--- a/tools/password-generator.html
+++ b/tools/password-generator.html
@@ -6,6 +6,7 @@
   <title>Password Generator | Bita Digital Hub</title>
   <meta name="description" content="Create secure, custom passwords instantly — safe, simple, and fast password generator by Bita Digital Hub." />
 
+  <!-- 🌐 Unified Styles -->
   <link rel="icon" type="image/svg+xml" href="../assets/taskhub-logo.svg" />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/theme.css" />
@@ -14,6 +15,7 @@
 </head>
 
 <body>
+  <!-- 🧭 Header -->
   <div id="header-placeholder"></div>
   <script>
     fetch("../components/header-tools.html")
@@ -21,6 +23,7 @@
       .then(html => { document.getElementById("header-placeholder").innerHTML = html; });
   </script>
 
+  <!-- 🧰 Tool Layout -->
   <main class="tool-layout">
     <aside class="ad-side"></aside>
 
@@ -38,8 +41,10 @@
 
           <button type="button" id="generateBtn" class="primary-btn">Generate Password</button>
 
-          <div id="output" class="output-box hidden">
-            <p id="resultMsg"></p>
+          <div id="outputBox" class="output-box hidden">
+            <input type="text" id="output" readonly class="text-input" />
+            <button type="button" id="copyBtn" class="btn outline" style="margin-top: 0.5rem;">Copy</button>
+            <p id="copyMsg" style="display:none; color:#22c55e; font-weight:500;">Copied!</p>
           </div>
         </form>
       </div>
@@ -48,6 +53,7 @@
     <aside class="ad-side"></aside>
   </main>
 
+  <!-- 🦶 Footer -->
   <div id="footer-placeholder"></div>
   <script>
     fetch("../components/footer-tools.html")
@@ -55,6 +61,50 @@
       .then(html => { document.getElementById("footer-placeholder").innerHTML = html; });
   </script>
 
-  <script src="../js/password-main.js" defer></script>
+  <!-- ⚙️ Password Generator Script -->
+  <script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const generateBtn = document.querySelector("#generateBtn");
+    const output = document.querySelector("#output");
+    const outputBox = document.querySelector("#outputBox");
+    const lengthInput = document.querySelector("#length");
+    const useNumbers = document.querySelector("#includeNumbers");
+    const useSymbols = document.querySelector("#includeSymbols");
+    const copyBtn = document.querySelector("#copyBtn");
+    const copyMsg = document.querySelector("#copyMsg");
+
+    function generatePassword() {
+      const length = parseInt(lengthInput.value) || 12;
+      const letters = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+      const numbers = "0123456789";
+      const symbols = "!@#$%^&*()_+-=[]{}|;:,.<>?";
+      let charset = letters;
+
+      if (useNumbers.checked) charset += numbers;
+      if (useSymbols.checked) charset += symbols;
+
+      let password = "";
+      for (let i = 0; i < length; i++) {
+        const randomIndex = Math.floor(Math.random() * charset.length);
+        password += charset[randomIndex];
+      }
+
+      output.value = password;
+      outputBox.classList.remove("hidden");
+    }
+
+    function copyToClipboard() {
+      navigator.clipboard.writeText(output.value)
+        .then(() => {
+          copyMsg.style.display = "block";
+          setTimeout(() => (copyMsg.style.display = "none"), 1500);
+        })
+        .catch(() => alert("Copy failed. Please try manually."));
+    }
+
+    if (generateBtn) generateBtn.addEventListener("click", generatePassword);
+    if (copyBtn) copyBtn.addEventListener("click", copyToClipboard);
+  });
+  </script>
 </body>
 </html>
