--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
       </a>
 
       <a href="tools/convert-to-mp3.html" class="card gradient-pink">
-        <div class="card-icon"><i data-lucide="🎵"></i></div>
+        <div class="card-icon">🎵</div>
         <h3>Convert Video / Voice to MP3</h3>
         <p>Transform any video or audio file into high-quality MP3 — fast, private, and runs fully in your browser.</p>
       </a>
