--- a/index.html
+++ b/index.html
@@ -347,27 +347,52 @@
 
   </section>
 
-  <!-- 💬 CONTACT -->
-  <section id="contact" class="section contact light">
-    <h2>Contact Us</h2>
-    <p class="section-sub">Let’s build something amazing together</p>
+ <!-- 💬 CONTACT -->
+<section id="contact" class="section contact light">
+  <h2>Contact Us</h2>
+  <p class="section-sub">Let’s build something amazing together</p>
 
-    <form class="contact-form" action="https://formsubmit.co/contact@bitadigitalhub.com" method="POST">
-      <div class="form-grid">
-        <input type="text" name="name" placeholder="Full Name *" required />
-        <input type="email" name="email" placeholder="Email Address *" required />
-      </div>
+  <form class="contact-form" action="https://formsubmit.co/contact@bitadigitalhub.com" method="POST">
+    <!-- 🔹 Basic Info -->
+    <div class="form-grid">
+      <input type="text" name="name" placeholder="Full Name *" required aria-label="Full Name" />
+      <input type="email" name="email" placeholder="Email Address *" required aria-label="Email Address" />
+    </div>
 
-      <div class="form-grid">
-        <input type="text" name="company" placeholder="Company" />
-        <input type="text" name="phone" placeholder="Phone" />
-      </div>
+    <!-- 🔹 Optional Fields -->
+    <div class="form-grid">
+      <input type="text" name="company" placeholder="Company (optional)" aria-label="Company" />
+      <input type="text" name="phone" placeholder="Phone" aria-label="Phone" />
+    </div>
 
-      <textarea name="message" placeholder="Tell us about your project..." required></textarea>
+    <!-- 🔹 Message -->
+    <textarea name="message" placeholder="Tell us about your project..." required aria-label="Message"></textarea>
 
-      <button type="submit" class="btn primary">Send Message</button>
-    </form>
-  </section>
+    <!-- 🔹 Submit Button -->
+    <button type="submit" class="btn primary" id="contactSubmitBtn">Send Message</button>
+
+    <!-- ⚙️ Hidden FormSubmit Config -->
+    <input type="hidden" name="_subject" value="New Contact Form Submission - Bita Digital Hub">
+    <input type="hidden" name="_captcha" value="false">
+    <input type="hidden" name="_template" value="table">
+    <input type="hidden" name="_next" value="https://bitadigitalhub.com/thank-you.html">
+    <input type="text" name="_honey" style="display:none">
+  </form>
+</section>
+
+<!-- 🧠 Optional: UX Enhancement -->
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+    const form = document.querySelector('form[action^="https://formsubmit.co/"]');
+    const btn = document.getElementById("contactSubmitBtn");
+    if (form && btn) {
+      form.addEventListener("submit", () => {
+        btn.disabled = true;
+        btn.textContent = "Sending...";
+      });
+    }
+  });
+</script>
 
   <!-- 🦶 Footer -->
   <div id="footer-placeholder"></div>
