--- a/index.html
+++ b/index.html
@@ -210,10 +210,16 @@
       using data, cloud, and AI-powered systems.
     </p>
     <div class="cta-buttons">
-      <a href="#courses" class="btn primary">Start Your Online Business</a>
+      <!-- Opens your main website in a new tab -->
+      <a href="https://www.bitaashoori.com" target="_blank" rel="noopener noreferrer" class="btn primary">
+        Start Your Online Business
+      </a>
+
+      <!-- Smooth scroll to contact section -->
       <a href="#contact" class="btn outline">Book a Call</a>
     </div>
   </section>
+
 
   <!-- 💡 ABOUT -->
   <section id="about" class="section about light">
