--- a/index-fa.html
+++ b/index-fa.html
@@ -143,8 +143,9 @@
   <main>
     <!-- 🌟 Hero -->
     <section id="home" class="section hero">
-      <h1>بساز، خودکار کن و آنلاین درآمد داشته باش</h1>
-      <p>بیتا دیجیتال هاب به خالقان و کسب‌وکارها کمک می‌کند تا با داده، فضای ابری و هوش مصنوعی رشد کنند.</p>
+      <h1>بساز، رشد کن و از دنیای آنلاین درآمد کسب کن</h1>
+      <h1> بیتا دیجیتال هاب به افراد و کسب‌وکارها کمک می‌کند تا با داده، فضای ابری و هوش مصنوعی، مسیر رشد خود را هوشمند کنند. </h1>
+      <p>ب</p>
       <div class="cta-buttons">
         <a href="https://www.bitaashoori.com" target="_blank" rel="noopener noreferrer" class="btn primary">
           شروع کسب‌وکار آنلاین
@@ -157,7 +158,7 @@
     <section id="about" class="section about light">
       <h2>به بیتا دیجیتال هاب خوش آمدید</h2>
       <p>در بیتا دیجیتال هاب، ما به قدرت تکنولوژی برای خلق فرصت‌های نو باور داریم. هدف ما ساده‌سازی مسیر موفقیت دیجیتال است — از استراتژی هوشمند تا اتوماسیون کامل سیستم‌ها.</p>
-      <p>— بیتا عاشوری، بنیان‌گذار</p>
+      <p>— بیتا آشوری، بنیان‌گذار</p>
     </section>
 
     <!-- 🧰 Tools -->
