added farsi header and footer

--- a/index-fa.html
+++ b/index-fa.html
@@ -217,7 +217,7 @@
   <!-- 🧭 Header -->
   <div id="header-placeholder"></div>
   <script>
-    fetch("components/header.html")
+    fetch("components/header-fa.html")
       .then(res => res.text())
       .then(html => document.getElementById("header-placeholder").innerHTML = html)
       .catch(console.error);
@@ -307,7 +307,7 @@
   <!-- 🦶 Footer -->
   <div id="footer-placeholder"></div>
   <script>
-    fetch("components/footer.html")
+    fetch("components/footer-fa.html")
       .then(res => res.text())
       .then(html => document.getElementById("footer-placeholder").innerHTML = html)
       .then(() => lucide.createIcons())
