added farsi header and footer4

--- a/index-fa.html
+++ b/index-fa.html
@@ -239,8 +239,8 @@
     <!-- 💡 About -->
     <section id="about" class="section light">
       <h2>به بیتا دیجیتال هاب خوش آمدید</h2>
-      <p>در بیتا دیجیتال هاب، ما به قدرت فناوری برای خلق فرصت‌های نو باور داریم. هدف ما ساده‌سازی مسیر موفقیت دیجیتال است — از استراتژی هوشمند تا اتوماسیون کامل سیستم‌ها.</p>
-      <p>— بیتا عاشوری، بنیان‌گذار</p>
+      <p>در بیتا دیجیتال هاب، ما به قدرت فناوری برای خلق فرصت‌های نو باور داریم. هدف ما ساده‌سازی مسیر موفقیت دیجیتال است, از استراتژی هوشمند تا اتوماسیون کامل سیستم‌ها.</p>
+      <p>— بیتا آشوری، بنیان‌گذار</p>
     </section>
 
     <!-- 🧰 Tools -->
