Refactor password generator HTML and scripts
fixed it for adsence

--- a/tools/password-generator.html
+++ b/tools/password-generator.html
@@ -6,7 +6,7 @@
   <title>Password Generator | Bita Digital Hub</title>
   <meta name="description" content="Create strong and random passwords instantly — secure, customizable, and easy to copy with Bita Digital Hub." />
 
-  <!-- 🌐 Unified Styles -->
+  <!-- 🌐 Styles -->
   <link rel="icon" type="image/svg+xml" href="../assets/taskhub-logo.svg" />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/theme.css" />
@@ -21,7 +21,6 @@
       margin: 1.5rem 0;
       flex-wrap: wrap;
     }
-
     .checkbox-group label {
       display: flex;
       align-items: center;
@@ -29,13 +28,6 @@
       font-size: 1rem;
       color: #334155;
     }
-
-    .checkbox-group input[type="checkbox"] {
-      width: 18px;
-      height: 18px;
-      accent-color: #1e3a8a;
-    }
-
     #copyMsg {
       display: none;
       color: #16a34a;
@@ -43,29 +35,32 @@
       margin-top: 0.5rem;
     }
 
-    /* Side Ad Styling */
+    /* Side Ads */
     [data-page="tools"] .ad-side {
       display: flex;
       align-items: flex-start;
       justify-content: center;
       padding-top: 2rem;
+      min-width: 160px;
     }
 
     [data-page="tools"] .ad-side ins.adsbygoogle {
       width: 160px;
       height: 600px;
-      max-width: 100%;
-      background: transparent;
     }
 
     @media (max-width: 1000px) {
-      [data-page="tools"] .ad-side { display: none; }
-      [data-page="tools"] .tool-layout {
+      .ad-side { display: none; }
+      .tool-layout {
         grid-template-columns: 1fr;
         padding: 2rem 1rem 3rem;
       }
     }
   </style>
+
+  <!-- 💰 AdSense Loader (ONLY ONCE) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
+          crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -77,63 +72,62 @@
       .then(html => { document.getElementById("header-placeholder").innerHTML = html; });
   </script>
 
-  <!-- 🧰 Tool Layout -->
+  <!-- 🧰 Layout -->
   <main class="tool-layout">
-    <!-- 🧭 Left Ad -->
+
+    <!-- Left Ad -->
     <aside class="ad-side">
       <ins class="adsbygoogle"
         style="display:block"
         data-ad-client="ca-pub-3215014361489762"
-        data-ad-slot="1234567890"  <!-- replace with your real slot -->
+        data-ad-slot="1234567890"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </aside>
 
-    <!-- 🎯 Password Generator Tool -->
+    <!-- Tool -->
     <section class="tool-center">
       <div class="tool-card gradient-blue">
         <h2>Password Generator 🔒</h2>
         <p>Create secure, random passwords instantly — customized for your security needs.</p>
 
         <form class="tool-form" onsubmit="return false;">
+
           <label for="length">Password Length:</label>
           <input type="number" id="length" min="6" max="40" value="12" class="text-input" />
 
           <div class="checkbox-group">
-            <label>
-              <input type="checkbox" id="includeNumbers" checked />
-              <span>Include Numbers (0–9)</span>
-            </label>
-
-            <label>
-              <input type="checkbox" id="includeSymbols" checked />
-              <span>Include Symbols (!@#$%)</span>
-            </label>
+            <label><input type="checkbox" id="includeNumbers" checked> Include Numbers</label>
+            <label><input type="checkbox" id="includeSymbols" checked> Include Symbols</label>
           </div>
 
           <button type="button" id="generateBtn" class="primary-btn">Generate Password</button>
 
           <div id="outputBox" class="output-box hidden">
-            <input type="text" id="output" readonly class="text-input" placeholder="Your password will appear here" />
-            <button type="button" id="copyBtn" class="btn outline" style="margin-top: 0.5rem;">Copy Password</button>
-            <p id="copyMsg">Copied to clipboard!</p>
+            <input type="text" id="output" readonly class="text-input" />
+            <button type="button" id="copyBtn" class="btn outline" style="margin-top:0.5rem;">Copy</button>
+            <p id="copyMsg">Copied!</p>
           </div>
+
         </form>
       </div>
     </section>
 
-    <!-- 🧭 Right Ad -->
+    <!-- Right Ad -->
     <aside class="ad-side">
       <ins class="adsbygoogle"
         style="display:block"
         data-ad-client="ca-pub-3215014361489762"
-        data-ad-slot="9876543210"  <!-- replace with your real slot -->
+        data-ad-slot="9876543210"
         data-ad-format="auto"
         data-full-width-responsive="true"></ins>
+      <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
     </aside>
+
   </main>
 
-  <!-- 🦶 Footer -->
+  <!-- Footer -->
   <div id="footer-placeholder"></div>
   <script>
     fetch("../components/footer-tools.html")
@@ -141,57 +135,38 @@
       .then(html => { document.getElementById("footer-placeholder").innerHTML = html; });
   </script>
 
-  <!-- ⚙️ Password Generator Script -->
+  <!-- ⚙️ Script -->
   <script>
   document.addEventListener("DOMContentLoaded", () => {
     const generateBtn = document.querySelector("#generateBtn");
     const output = document.querySelector("#output");
     const outputBox = document.querySelector("#outputBox");
-    const lengthInput = document.querySelector("#length");
-    const useNumbers = document.querySelector("#includeNumbers");
-    const useSymbols = document.querySelector("#includeSymbols");
-    const copyBtn = document.querySelector("#copyBtn");
-    const copyMsg = document.querySelector("#copyMsg");
 
     function generatePassword() {
-      const length = parseInt(lengthInput.value) || 12;
-      const letters = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
-      const numbers = "0123456789";
-      const symbols = "!@#$%^&*()_+-=[]{}|;:,.<>?";
-      let charset = letters;
+      const length = parseInt(document.querySelector("#length").value) || 12;
+      let chars = "abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ";
+      if (document.querySelector("#includeNumbers").checked) chars += "0123456789";
+      if (document.querySelector("#includeSymbols").checked) chars += "!@#$%^&*()_+-=[]{}|;:,.<>?";
 
-      if (useNumbers.checked) charset += numbers;
-      if (useSymbols.checked) charset += symbols;
-
-      let password = "";
+      let pass = "";
       for (let i = 0; i < length; i++) {
-        const randomIndex = Math.floor(Math.random() * charset.length);
-        password += charset[randomIndex];
+        pass += chars[Math.floor(Math.random() * chars.length)];
       }
 
-      output.value = password;
+      output.value = pass;
       outputBox.classList.remove("hidden");
     }
 
-    function copyToClipboard() {
-      navigator.clipboard.writeText(output.value)
-        .then(() => {
-          copyMsg.style.display = "block";
-          setTimeout(() => (copyMsg.style.display = "none"), 1500);
-        })
-        .catch(() => alert("Copy failed. Please try manually."));
-    }
-
     generateBtn.addEventListener("click", generatePassword);
-    copyBtn.addEventListener("click", copyToClipboard);
+
+    document.querySelector("#copyBtn").addEventListener("click", () => {
+      navigator.clipboard.writeText(output.value).then(() => {
+        document.querySelector("#copyMsg").style.display = "block";
+        setTimeout(() => document.querySelector("#copyMsg").style.display = "none", 1500);
+      });
+    });
   });
   </script>
 
-  <!-- 💰 AdSense Loader -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
-          crossorigin="anonymous"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
 </body>
 </html>
