Refactor blog section with updated articles2

--- a/index.html
+++ b/index.html
@@ -401,31 +401,40 @@
 </script>
 
   <!-- 📝 BLOG SECTION -->
-  <section id="blog" class="section light">
-    <h2>Latest Articles</h2>
-    <p class="section-sub">Insights to help you start and grow your online business</p>
+<section id="blog" class="section light">
+  <h2>Latest Articles</h2>
+  <p class="section-sub">Insights to help you start and grow your online business</p>
 
-    <div class="cards">
-      <a href="blog/start-online-business.html" class="card gradient-yellow" style="text-align:left;">
-        <div class="card-icon"><i data-lucide="rocket"></i></div>
-        <h3>How to Start a Successful Online Business in 2025</h3>
-        <p>
-          Learn the essential steps for launching a profitable online business — 
-          even if you're a complete beginner. From choosing a niche to creating 
-          automated systems, this guide walks you through everything.
-        </p>
-      </a>
+  <div class="cards">
 
-      <a href="articles/ai-automation-solopreneurs-2025.html">
-        The Rise of AI Automation for Solopreneurs in 2025
-      </a>
+    <!-- Article 1 -->
+    <a href="blog/start-online-business.html" class="card gradient-yellow" style="text-align:left;">
+      <div class="card-icon"><i data-lucide="rocket"></i></div>
+      <h3>How to Start a Successful Online Business in 2025</h3>
+      <p>
+        Learn the essential steps for launching a profitable online business —
+        even if you're a complete beginner. From choosing a niche to creating
+        automated systems, this guide walks you through everything.
+      </p>
+    </a>
 
-    </div>
+    <!-- Article 2 -->
+    <a href="articles/ai-automation-solopreneurs-2025.html" class="card gradient-purple" style="text-align:left;">
+      <div class="card-icon"><i data-lucide="settings"></i></div>
+      <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
+      <p>
+        Discover how AI is transforming online work — helping individuals automate
+        tasks, improve productivity, and build scalable businesses without large teams.
+      </p>
+    </a>
 
-    <div class="cta-buttons" style="margin-top:2rem;">
-      <a href="blog/start-online-business.html" class="btn primary">Read Full Article</a>
-    </div>
-  </section>
+  </div>
+
+  <div class="cta-buttons" style="margin-top:2rem;">
+    <a href="blog/start-online-business.html" class="btn primary">Read Full Article</a>
+  </div>
+</section>
+
 
 
   
