Update index.html updated main index

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
       <!-- Article 1 -->
       <article class="article-card yellow">
-        <a href="./blog/start-online-business.html">
+        <a href="blog/start-online-business.html">
           <div class="icon">🚀</div>
           <h3>How to Start a Successful Online Business in 2025</h3>
           <p>Essential steps for launching a profitable online business — even as a complete beginner.</p>
@@ -257,7 +257,7 @@
 
       <!-- Article 2 -->
       <article class="article-card purple">
-        <a href="./blog/ai-automation-solopreneurs-2025.html">
+        <a href="blog/ai-automation-solopreneurs-2025.html">
           <div class="icon">⚙️</div>
           <h3>The Rise of AI Automation for Solopreneurs in 2025</h3>
           <p>How AI is transforming online work, automating tasks, and helping creators scale faster.</p>
@@ -266,7 +266,7 @@
 
       <!-- Article 3 -->
       <article class="article-card blue">
-        <a href="./blog/ai-tools-small-business-2025.html">
+        <a href="blog/ai-tools-small-business-2025.html">
           <div class="icon">🤖</div>
           <h3>Top AI Tools Small Business Owners Should Use in 2025</h3>
           <p>The essential AI tools every business owner should use to save time and grow.</p>
@@ -275,7 +275,7 @@
 
       <!-- Article 4 -->
       <article class="article-card green">
-        <a href="./blog/digital-marketing-strategies-2025.html">
+        <a href="blog/digital-marketing-strategies-2025.html">
           <div class="icon">📈</div>
           <h3>The Best Digital Marketing Strategies for Beginners in 2025</h3>
           <p>Beginner-friendly marketing strategies to build your presence and audience.</p>
@@ -284,7 +284,7 @@
 
       <!-- Article 5 -->
       <article class="article-card pink">
-        <a href="./blog/marketing-skills-2025.html">
+        <a href="blog/marketing-skills-2025.html">
           <div class="icon">✨</div>
           <h3>Essential Digital Marketing Skills You Need in 2025</h3>
           <p>The top skills every creator, marketer, and business owner needs this year.</p>
@@ -294,15 +294,11 @@
     </div>
 
     <div class="cta-buttons">
-      <a href="./blog/index-blog.html" class="btn primary">View All Articles</a>
+      <a href="blog/index-blog.html" class="btn primary">View All Articles</a>
     </div>
 
   </div>
 </section>
-
-
-  
-
 
   <!-- 🧰 TOOLS -->
   <section id="tools" class="section tools light">
